--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <html>
     <head>
 		<title>Ada Augusta King</title>
@@ -8,16 +7,16 @@
     <body>
         <h1> Ada Augusta King </h1>
 
-        <img src="foto-ada.jpg" alt="Ada Lovelace">
+        <img src="foto-ada01.jpg" alt="Ada Lovelace">
 
-        <p> Ada Augusta King, Condessa de Lovelace (Byron, 1815 - 1852),<br>
+        <p class="texto1" > Ada Augusta King, Condessa de Lovelace (Byron, 1815 - 1852),<br>
             foi uma matemática e escritora inglesa. Ela foi a primeira a reconhecer que <br>
              máquinas poderiam ter aplicações além de puro calculos e criou primeiro <br>
              algoritmo para ser processado por uma máquina, a máquina analítica de <br>
              Charles Babbage.<br><br>
         </p>
 
-        <p> Durante o período em que esteve envolvida com o projeto de <br> 
+        <p class="texto2"> Durante o período em que esteve envolvida com o projeto de <br> 
             Babbage, ela desenvolveu os algoritmos que permitiriam a máquina computar <br>
             os valores de funções matemáticas, além de publicar uma coleção de notas<br> 
             sobre a máquina analítica.<br><br>
